--- a/medals.html
+++ b/medals.html
@@ -1,6 +1,7 @@
 <h1>Welcome to our store!</h1>
 <p>Please choose a section below.</p>
 <p>We have a fine selection of medals.</p>
+<p>Thank you for shopping with us!</p>
 <div>
     <a href="bronze.html">Bronze medals</a>
 </div>
